# DroneTarget

./: .gitignore  README.md
Drones_Test_Multiboot/: CMakeLists.txt  package.xml
Drones_Test_Multiboot/include/drone_test/: keyboard_controller.h
Drones_Test_Multiboot/launch/: drone_test_node.launch
Drones_Test_Multiboot/src/: keyboard_controller.cpp  main_controller.cpp
decision_cible/: CMakeLists.txt  package.xml
decision_cible/launch/: decision_cible_node.launch
decision_cible/src/: decision_cible_node.cpp
decision_cible_couleur/: CMakeLists.txt  package.xml
decision_cible_couleur/launch/: decision_cible_couleur_node.launch
decision_cible_couleur/src/: decision_cible_couleur_node.cpp
detection_personne/: CMakeLists.txt  package.xml
detection_personne/launch/: detection_personne_node.launch
detection_personne/src/: scan_humain.cpp
detection_rouge/: CMakeLists.txt  package.xml
detection_rouge/launch/: detection_rouge_node.launch
detection_rouge/msg/: barycentre_data.msg
detection_rouge/src/: scan_red.cpp
regulateur/: CMakeLists.txt  package.xml
regulateur/launch/: regulateur_node.launch
regulateur/src/: command_pid.cpp
ros_opencv/: CMakeLists.txt  package.xml
ros_opencv/launch/: ros_opencv_node.launch
ros_opencv/src/: ros_opencv.cpp
usb_cam/: CMakeLists.txt
usb_cam/src/: image_converter.cpp
